# jdanbot

./: .flake8  .gitignore  Dockerfile  Dockerfile.dev  Procfile  README.md  bot.py  commands.txt  config.example.yml  data.py  db.sql  default_settings.toml  docker-compose.yml  docker-dev.sh  index.py  jdanbot-db.ipynb  nword.py  prettyword.py  pyproject.toml  requirements.txt  sendDB.py  settings.toml  wikipedia.py
.github/workflows/: flake8.yml  main.yml
bot/: README.md  __init__.py  __main__.py  admin.py  all.py  art.py  ban.py  bash.py  bot.py  calc.py  config.py  crypto.py  data.py  data.yml  database.py  dev.py  duck.py  eggs.py  eval.py  fandom.py  habr.py  inline.py  locale.py  lurk.py  memes.py  menu.py  minewiki.py  navalny.py  notes.py  photo.py  random.py  rules.py  scp.py  spy.py  status.py  stickers.py  test.py  text.py  texts.yml  timer.py  (+9 more)
bot/cache/: cache.txt
bot/chat_misc/: admin.py  deutscher.py  modules.py  notes.py  ocr.py  pidor.py  pol.py  settings.py  settings_handlers.py
bot/components/: __init__.py  absurd.py  art.py  ban.py  bash.py  crypto.py  dev.py  eval.py  fandom.py  github.py  inline.py  lurk.py  lurk2.py  lurk_old.py  math.py  memes.py  menu.py  mrakopedia.py  photo.py  pin_katz.py  random.py  rules.py  scp.py  status.py  stickers.py  test.py  text.py  texts.py  token.py  translate.py  wget.py  wiki.py  youtube.py
bot/config/: __init__.py  bot.py  config.py  database.py  i18n.py  languages.py  logger.py  server.py  vk_api.py
bot/database/: __init__.py  chat.py  chat_member.py  command.py  commandstats.py  connection.py  event.py  feed.py  note.py  pidor.py  pidorstats.py  poll.py  user.py  video.py  warn.py
bot/dev/: calc.py  crypto.py  dev.py  eval.py  status.py  test.py  text.py  update.py
bot/develop/: calc.py  delete.py  eval.py  netscape.py  ping.py  spy.py  status.py  wget.py
bot/filters/: __init__.py  admin.py  random.py  superuser.py
bot/handlers/: __init__.py  check.py  get_text.py  only_admins.py  only_jdan.py  parse_arguments.py  randomed_start.py  send_article.py  wikipya_handler.py
bot/i18n/: ban.en.yml  ban.ru.yml  ban.ua.yml  ban.uk.yml  cases.en.yml  cases.ru.yml  cases.ua.yml  cases.uk.yml  errors.en.yml  errors.ru.yml  errors.ua.yml  errors.uk.yml  menu.en.yml  menu.ru.yml  menu.ua.yml  menu.uk.yml  notes.en.yml  notes.ru.yml  notes.ua.yml  notes.uk.yml  pidor.en.yml  pidor.ru.yml  pidor.ua.yml  pidor.uk.yml  spy.en.yml  spy.ru.yml  spy.ua.yml  spy.uk.yml  (+7 more)
flake8/: 05.01.2021.txt  13.12.2020.txt  15.08.2020.txt  19.10.2020.txt  30.08.2020.txt  30.08.2020_2.txt
locales/: ban.en.yml  ban.ru.yml  ban.uk.yml  notes.en.yml  notes.ru.yml  notes.uk.yml  pidor.ru.yml  pidor.uk.yml  spy.en.yml  spy.ru.yml  spy.uk.yml  triggers.en.yml  triggers.ru.yml  triggers.uk.yml  wiki.ru.yml
migrations/: 001_snake_case.py  002_foreign_revolution.py  003_pidor_events.py
tests/: conftest.py  examples.py  test_locales.py  test_rss.py  types.py
utils/: start.py  updateDB.py
(+191 files in other folders)
