[tool.poetry]
name = "jdanbot"
version = "3.1.4"
description = "Multifunctional Telegram Bot for banning and stuff."
authors = ["Daniel Zakharov <gzdan734@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
aioschedule = "^0.5.2"
art = "^5.4"
beautifulsoup4 = "^4.10.0"
coloredlogs = "^15.0.1"
httpx = "^0.21.3"
lxml = "^4.7.1"
psutil = "^5.9.0"
pyduckgo = "^0.2.0"
pymemeru = "^0.2.0"
peewee = "^3.14.8"
pydantic = "^1.9.0"
emoji = "^1.6.1"
pytz = "^2021.3"
deep-translator = "=1.8.3"
distro = "^1.7.0"
humanize = "^4.1.0"
pendulum = "^2.1.2"
pytimeparse = "^1.1.8"
pytesseract = "^0.3.10"
pyi18n-new = "^1.1.0"
ffmpeg-python = "^0.2.0"
tghtml = "1.1.4"
wikipya = "4.0.5"
cached-property = "^1.5.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
bandit = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
